--- a/src/main/resources/assets/banhammer/lang/en_us.json
+++ b/src/main/resources/assets/banhammer/lang/en_us.json
@@ -7,11 +7,15 @@
   "banhammer.hoursInput" : "Hours",
   "banhammer.daysInput" : "Days",
   "banhammer.kickreason" : "Kick Reason",
+  "banhammer.hold_shift": "Hold Shift to view description",
   "banhammer.setkickreason" : "Set Kick Reason",
   "item.banhammer.ban_hammer" : "Ban Hammer",
-  "item.banhammer.ban_hammer.description": "Right Click to set the ban reason and time\nLeft click on a player to ban them\nLeft click on a mob to instantly kill them",
-  "item.banhammer.ban_hammer.hold_shift": "Hold [SHIFT] for instructions",
+  "item.banhammer.ban_hammer.description_1": "Right Click to set the ban reason and time",
+  "item.banhammer.ban_hammer.description_2": "Left click on a player to ban them",
+  "item.banhammer.ban_hammer.description_3": "Left click on a mob to instantly kill them",
   "item.banhammer.kick_stick" : "Kick Stick",
+  "item.banhammer.kick_stick.description_1": "Right Click to set the kick reason",
+  "item.banhammer.kick_stick.description_2": "Left click on a player to kick them",
   "banhammer.hours_error": "Hours must be an integer or empty",
   "banhammer.days_error": "Days must be an integer or empty",
   "banhammer.errortitle": "ERROR",
